# ap_dynamics

./: .gitignore  CMakeLists.txt  CompilerWarnings.cmake  README.md  ap_dynamics.jucer
Builds/CLion/: CMakeLists.txt  Debug-Info-AU.plist  Debug-Info-VST3.plist  Release-Info-Standalone_Plugin.plist
Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist
Builds/MacOSX/ap_dynamics.xcodeproj/: project.pbxproj
DSP/: APCompressor.cpp  APCompressor.h  APConvolution.cpp  APConvolution.h  APOverdrive.cpp  APOverdrive.h  APTubeDistortion.cpp  APTubeDistortion.h
Helpers/: APDefines.h
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Resources/shaders/: basic.shader  liquidmetal.shader
Source/: APDefines.cpp  APDefines.h  APLookAndFeel.cpp  APLookAndFeel.h  APParameterMenu.cpp  APParameterMenu.h  APPlot.cpp  APPlot.h  APSlider.cpp  APSlider.h  APSliderLook.h  APStyle.cpp  APStyle.h  APToggleButton.cpp  APToggleButton.h  ButtonMenu.cpp  ButtonMenu.h  ComponentEditor.h  CustomSlider.cpp  CustomSlider.h  MixerButton.cpp  MixerButton.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ShowHideContainer.h  WaveformWindow.cpp  WaveformWindow.h
Source/OpenGL/: SliderBarGL.cpp  SliderBarGL.h
Tests/: plot_test.cpp  temp-test.cpp  tester.cpp
dependencies/: CMakeLists.txt
dependencies/catch2/: CMakeLists.txt
dependencies/juce/: CMakeLists.txt
